Added modal functionality

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </a>
         </div>
         <div id="workbtn">
-            <button>Learn More</button>
+            <button id="moreBtn">Learn More</button>
             <button id="projectBtn">See my work!</button>
         </div>
 
@@ -158,6 +158,18 @@
     <section id="projects" class="hidden">
         <h1>Projects</h1>
     </section>
+    <div id="moreabout" class="modal">
+        <div class="modal-content">
+            <div class="close-conatiner">
+                <span class="close" id="closeBtn">&times;</span>
+            </div>
+            <p>Hey again! My Name is Ebenezer. I'm a self-taught Front-end developer and IT Engineer from Ireland,
+                currently woking at NCI in Dublin
+
+            </p>
+        </div>
+    </div>
+
     <footer>
 
     </footer>
