--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
@@ -158,14 +160,15 @@
     <section id="projects" class="hidden">
         <h1>Projects</h1>
     </section>
-    <div id="moreabout" class="modal">
+    <section id="moreabout" class="modal">
         <div class="modal-content">
             <div class="close-conatiner">
                 <span class="close" id="closeBtn">&times;</span>
             </div>
             <p>Hey again! My Name is Ebenezer. I'm a self-taught Front-end developer and IT Engineer from Ireland,
-                currently woking at NCI in Dublin
-
+                currently woking at NCI in Dublin.
+                <br>
+                <br>
                 My love for coding started when I was first introduced to coding in a computer science class in
                 secondary
                 school.
@@ -183,8 +186,37 @@
 
             </p>
         </div>
-    </div>
+    </section>
+    <section id="contact">
+        <!-- <h2>Contact</h2> -->
 
+        <div id="contact-info">
+            <div class="contact-info"><span class="material-symbols-outlined">
+                    call
+                </span> +3530892559019</div>
+            <div class="contact-info"><span class="material-symbols-outlined">
+                    mail
+                </span>
+                ebenezer.laleye@gmail.com </div>
+            <div class="contact-info"><span class="material-symbols-outlined">
+                    location_on
+                </span> Dublin, Ireland</div>
+        </div>
+        <div class="line"></div>
+        <div id="contact-form">
+            <h3>Get in Touch!</h3>
+            <form action="" id="contact-details">
+
+                <input type="text" name="fullname" id="fullname" placeholder="Your Name">
+
+                <input type="email" name="email" id="email" placeholder="Your email" required>
+                <textarea name="message" id="message" cols="60" rows="15" placeholder="Your Message"></textarea>
+                <input type="submit" value="Submit" class="submit" />
+
+            </form>
+        </div>
+
+    </section>
     <footer>
 
     </footer>
