adding project section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav id="navigation">
         <div id="nav-links">
             <a href="#" id="projectlink" class="nav-link">Project</a>
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#" id="contactlink" class="nav-link">Contact</a>
         </div>
     </nav>
     <section id="about" class="hidden">
@@ -159,6 +159,37 @@
     </section>
     <section id="projects" class="hidden">
         <h1>Projects</h1>
+        <div class="projects">
+            <div class="project">
+                <img class="projectimg" src="/img/artist page.png" alt="">
+                <h4>Music artist website</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, nulla totam ducimus earum
+                    perspiciatis optio debitis, cum nemo similique dicta recusandae saepe ab quos delectus deserunt et
+                    eum enim consectetur.</p>
+                <div class="projectlinks">
+                    <a href="" class="projectlink">Code Source</a>
+                    <a href="" class="projectlink">Website</a>
+                </div>
+            </div>
+            <div class="project">
+                <img class="projectimg" src="" alt="">
+                <h4>Weather App</h4>
+                <p></p>
+                <div class="projectlinks">
+                    <a href="" class="projectlink">Code Source</a>
+                    <a href="" class="projectlink">Website</a>
+                </div>
+            </div>
+            <div class="project">
+                <img class="projectimg" src="" alt="">
+                <h4> Fake Tech Conference web page </h4>
+                <p></p>
+                <div class="projectlinks">
+                    <a href="" class="projectlink">Code Source</a>
+                    <a href="" class="projectlink">Website</a>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="moreabout" class="modal">
         <div class="modal-content">
