--- a/index.html
+++ b/index.html
@@ -163,30 +163,40 @@
             <div class="project">
                 <img class="projectimg" src="/img/artist page.png" alt="">
                 <h4>Music artist website</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, nulla totam ducimus earum
-                    perspiciatis optio debitis, cum nemo similique dicta recusandae saepe ab quos delectus deserunt et
-                    eum enim consectetur.</p>
+                <p>"The artist website showcases the portfolio of a talented individual, featuring a diverse range of
+                    their work in different mediums. The clean and modern design allows for easy navigation and
+                    showcasing of the artist's pieces. The site includes a bio section, contact information, and a
+                    seprate concert page. "</p>
                 <div class="projectlinks">
-                    <a href="" class="projectlink">Code Source</a>
+                    <a href="https://github.com/EbenezerLaleye/Artist-website" class="projectlink">Code Source</a>
                     <a href="" class="projectlink">Website</a>
                 </div>
             </div>
             <div class="project">
-                <img class="projectimg" src="" alt="">
+                <img class="projectimg" src="/img/weather app.png" alt="">
                 <h4>Weather App</h4>
-                <p></p>
+                <p>The app utilizes HTML, CSS and JavaScript and allows users to search for current weather conditions
+                    in any location around the world. It
+                    utilizes the OpenWeatherMap API to retrieve data such as temperature, humidity, wind speed, and
+                    weather description. The user interface is sleek and easy to navigate. </p>
                 <div class="projectlinks">
-                    <a href="" class="projectlink">Code Source</a>
+                    <a href="https://github.com/EbenezerLaleye/Weather-web-app" class="projectlink">Code Source</a>
                     <a href="" class="projectlink">Website</a>
                 </div>
             </div>
             <div class="project">
-                <img class="projectimg" src="" alt="">
+                <img class="projectimg" src="/img/conference.png" alt="">
                 <h4> Fake Tech Conference web page </h4>
-                <p></p>
+                <p>The Tech Conference web page is a visually appealing and easy-to-navigate website that is built using
+                    HTML, CSS, and JavaScript. It incorperates a color scheme that is easy on the eyes and a layout that
+                    is easy to follow. The website is fully responsive and works seamlessly across all devices,
+                    including desktop computers, tablets, and smartphones. The homepage includes timer made with JS that
+                    counts down to the Event </p>
                 <div class="projectlinks">
-                    <a href="" class="projectlink">Code Source</a>
+                    <a href="https://github.com/EbenezerLaleye/2-day-Conference-website" class="projectlink">Code
+                        Source</a>
                     <a href="" class="projectlink">Website</a>
+
                 </div>
             </div>
         </div>
