--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
         <div class="line"></div>
         <div id="contact-form">
             <h3>Get in Touch!</h3>
-            <form action="" id="contact-details">
+            <form action="https://formspree.io/f/xbjejvwr" method="POST" id="contact-details">
 
                 <input type="text" name="fullname" id="fullname" placeholder="Your Name">
 
                 <input type="email" name="email" id="email" placeholder="Your email" required>
-                <textarea name="message" id="message" cols="60" rows="15" placeholder="Your Message"></textarea>
+                <textarea name="message" id="message" cols="60" rows="10" placeholder="Your Message"></textarea>
                 <input type="submit" value="Submit" class="submit" />
 
             </form>
