--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     weather description. The user interface is sleek and easy to navigate. </p>
                 <div class="projectlinks">
                     <a href="https://github.com/EbenezerLaleye/Weather-web-app" class="projectlink">Code Source</a>
-                    <a href="weatherapp-eol.netlify.app" class="projectlink">Website</a>
+                    <a href="https://weatherapp-eol.netlify.app" class="projectlink">Website</a>
                 </div>
             </div>
             <div class="project">
