--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     seprate concert page. "</p>
                 <div class="projectlinks">
                     <a href="https://github.com/EbenezerLaleye/Artist-website" class="projectlink">Code Source</a>
-                    <a href="" class="projectlink">Website</a>
+                    <a href="https://otolaleye.netlify.app/fohp/fohp" class="projectlink">Website</a>
                 </div>
             </div>
             <div class="project">
