--- a/index.html
+++ b/index.html
@@ -247,12 +247,18 @@
         <div id="contact-form">
             <h3>Get in Touch!</h3>
             <form action="https://formspree.io/f/xbjejvwr" method="POST" id="contact-details">
-
-                <input type="text" name="fullname" id="fullname" placeholder="Your Name">
-
-                <input type="email" name="email" id="email" placeholder="Your email" required>
-                <textarea name="message" id="message" cols="60" rows="10" placeholder="Your Message"></textarea>
-                <input type="submit" value="Submit" class="submit" />
+                <div class="input-wrap">
+                    <input type="text" name="fullname" id="fullname" placeholder="Your Name">
+                </div>
+                <div class="input-wrap">
+                    <input type="email" name="email" id="email" placeholder="Your email" required>
+                </div>
+                <div class="input-wrap">
+                    <textarea name="message" id="message" rows="10" placeholder="Your Message"></textarea>
+                </div>
+                <div class="input-wrap">
+                    <input type="submit" value="Submit" class="submit" />
+                </div>
 
             </form>
         </div>
