--- a/index.html
+++ b/index.html
@@ -186,11 +186,12 @@
             </div>
             <div class="project">
                 <img class="projectimg" src="/img/conference.png" alt="">
-                <h4> Fake Tech Conference web page </h4>
+                <h4> Tech Conference page </h4>
                 <p>The Tech Conference web page is a visually appealing and easy-to-navigate website that is built using
                     HTML, CSS, and JavaScript. It incorperates a color scheme that is easy on the eyes and a layout that
                     is easy to follow. The website is fully responsive and works seamlessly across all devices,
-                    including desktop computers, tablets, and smartphones. The homepage includes timer made with JS that
+                    including desktop computers, tablets, and smartphones. The homepage includes a tickets page and a
+                    timer made with JS that
                     counts down to the Event </p>
                 <div class="projectlinks">
                     <a href="https://github.com/EbenezerLaleye/2-day-Conference-website" class="projectlink">Code
