--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="projectlinks">
                     <a href="https://github.com/EbenezerLaleye/2-day-Conference-website" class="projectlink">Code
                         Source</a>
-                    <a href="" class="projectlink">Website</a>
+                    <a href="https://conferencepagetech.netlify.app" class="projectlink">Website</a>
 
                 </div>
             </div>
