minor changes to setup

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- <div class="skewed"></div> -->
     </section>
     <section id="skills" class="hidden">
-        <!-- <h2>Languages and Tools</h2> -->
+        <h2>Languages and Tools</h2>
         <div id="skills_group">
             <div class="skills_icon">
                 <p>HTML</p>
