--- a/index.html
+++ b/index.html
@@ -58,6 +58,38 @@
         </div>
 
         <!-- <div class="skewed"></div> -->
+        <section id="moreabout" class="modal">
+            <div class="modal-content">
+                <div class="close-conatiner">
+                    <span class="close" id="closeBtn">&times;</span>
+                </div>
+                <p>Hey again! My Name is Ebenezer. I'm a self-taught Front-end developer and IT Engineer from Ireland,
+                    currently woking at NCI in Dublin.
+                    <br>
+                    <br>
+                    My love for coding started when I was first introduced to coding in a computer science class in
+                    secondary
+                    school.
+                    <br>
+                    <br>
+                    At first, I found the concepts and syntax confusing, but as I began to understand how to write
+                    simple programs, I became fascinated by the power of code to create and control digital systems. As
+                    I
+                    continued to learn and experiment with different languages and frameworks, I found that coding was
+                    not
+                    only a practical skill, but also a creative outlet that allowed me to build my own ideas from
+                    scratch.
+                    <br>
+                    <br>
+                    With each new project I tackled, I fell more and more in love with the process of problem-solving
+                    and
+                    creating something new. Eventually, I knew that I wanted to make a career out of it, and I decided
+                    to
+                    pursue further education and training in the field.
+
+                </p>
+            </div>
+        </section>
     </section>
     <section id="skills" class="hidden">
         <h2>Languages and Tools</h2>
@@ -200,33 +232,6 @@
 
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="moreabout" class="modal">
-        <div class="modal-content">
-            <div class="close-conatiner">
-                <span class="close" id="closeBtn">&times;</span>
-            </div>
-            <p>Hey again! My Name is Ebenezer. I'm a self-taught Front-end developer and IT Engineer from Ireland,
-                currently woking at NCI in Dublin.
-                <br>
-                <br>
-                My love for coding started when I was first introduced to coding in a computer science class in
-                secondary
-                school.
-                <br>
-                <br>
-                At first, I found the concepts and syntax confusing, but as I began to understand how to write
-                simple programs, I became fascinated by the power of code to create and control digital systems. As I
-                continued to learn and experiment with different languages and frameworks, I found that coding was not
-                only a practical skill, but also a creative outlet that allowed me to build my own ideas from scratch.
-                <br>
-                <br>
-                With each new project I tackled, I fell more and more in love with the process of problem-solving and
-                creating something new. Eventually, I knew that I wanted to make a career out of it, and I decided to
-                pursue further education and training in the field.
-
-            </p>
         </div>
     </section>
     <section id="contact">
