--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utilities.css">
     <title>Ebenezer's Portfolio</title>
 </head>
 
@@ -21,9 +22,9 @@
             <h1 class="logo">Ebenezer O.Laleye</h1>
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
