adding social links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <p class="lead2">I love building beautiful and modern websites. I'm a lifelong learner and have been
                     into all things
                     tech for as long I as can remember!</p>
+                <div class="social">
+                    <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                    <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+                </div>
             </div>
             <div class="portrait card">
                 <img src="/svg/about.svg" alt="">
