adding languages and tools section

--- a/index.html
+++ b/index.html
@@ -39,16 +39,45 @@
                     into all things
                     tech for as long I as can remember!</p>
                 <div class="social">
-                    <a href="#"><i class="fab fa-github fa-2x"></i></a>
-                    <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a href="https://github.com/EbenezerLaleye"><i class="fab fa-github fa-2x"></i></a>
+                    <a href="https://www.linkedin.com/in/ebenezerlaleye/"><i class="fab fa-linkedin fa-2x"></i></a>
                 </div>
             </div>
             <div class="portrait card">
                 <img src="/svg/about.svg" alt="">
             </div>
         </div>
+    </section>
+    <section class="lang_tools">
+        <div class="container flex">
+            <h2 class="title">Languages and Tools</h2>
+            <div class="languages">
+                <div class="language card">
+                    <h2>HTML5</h2>
+                    <img src="svg/HTML.svg" alt="">
+                </div>
+                <div class="language card">
+                    <h2>CSS3</h2>
+                    <img src="svg/CSS.svg" alt="">
+                </div>
+                <div class="language card">
+                    <h2>Bootstrap</h2>
+                    <img src="svg/Bootstrap.svg" alt="">
+                </div>
+                <div class="language card">
+                    <h2>Javascript</h2>
+                    <img src="svg/Javascript.svg" alt="">
+                </div>
+                <div class="language card">
+                    <h2>React</h2>
+                    <img src="svg/react.svg" alt="">
+                </div>
+                <div class="language card">
+                    <h2>Github</h2>
+                    <img src="svg/github.svg" alt="">
+                </div>
+            </div>
         </div>
-
     </section>
     <script src="script.js"></script>
 </body>
