adding contact section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,41 @@
             </div>
 
         </div>
+        </section>
+        <section class="contact">
+            <div class="container flex">
+                <div id="contact-info">
+                    <div class="contact-info"><span class="material-symbols-outlined">
+                            call
+                        </span> +3530892559019</div>
+                    <div class="contact-info"><span class="material-symbols-outlined">
+                            mail
+                        </span>
+                        ebenezer.laleye@gmail.com </div>
+                    <div class="contact-info"><span class="material-symbols-outlined">
+                            location_on
+                        </span> Dublin, Ireland</div>
+                </div>
+                <!-- <div class="line"></div> -->
+                <div id="contact-form">
+                    <h3>Get in Touch!</h3>
+                    <form action="https://formspree.io/f/xbjejvwr" method="POST" id="contact-details">
+                        <div class="input-wrap">
+                            <input type="text" name="fullname" id="fullname" placeholder="Your Name">
+                        </div>
+                        <div class="input-wrap">
+                            <input type="email" name="email" id="email" placeholder="Your email" required>
+                        </div>
+                        <div class="input-wrap">
+                            <textarea name="message" id="message" rows="10" placeholder="Your Message"></textarea>
+                        </div>
+                        <div class="input-wrap">
+                            <input type="submit" value="Submit" class="submit" />
+                        </div>
+        
+                    </form>
+                </div>
+    </div>
     </section>
     <script src="script.js"></script>
 </body>
