--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" id="projectBtn">Projects</a></li>
+                    <li><a href="#" id="contactBtn">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -80,7 +80,7 @@
         </div>
     </section>
 
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="container">
             <h2 class="title">Projects</h2>
             <div class="project grid ">
@@ -139,19 +139,13 @@
 
         </div>
         </section>
-        <section class="contact">
+        <section class="contact" id="contact">
             <div class="container flex">
                 <div id="contact-info">
-                    <div class="contact-info"><span class="material-symbols-outlined">
-                            call
-                        </span> +3530892559019</div>
-                    <div class="contact-info"><span class="material-symbols-outlined">
-                            mail
-                        </span>
+                    <div class="contact-info"> +3530892559019</div>
+                    <div class="contact-info">
                         ebenezer.laleye@gmail.com </div>
-                    <div class="contact-info"><span class="material-symbols-outlined">
-                            location_on
-                        </span> Dublin, Ireland</div>
+                    <div class="contact-info"> Dublin, Ireland</div>
                 </div>
                 <!-- <div class="line"></div> -->
                 <div id="contact-form">
